<resources>
    <string name="app_name">B07 Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="logout">Log out</string>
    <string name="hello_first_fragment">Login</string>
    <string name="course_menu">Course Menu</string>
    <string name="signup">Sign Up</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="expected_course_timeline">Expected course timeline</string>
    <string name="add_course">Add course</string>
    <string name="plus_add">+add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="planned_courses">Planned Courses:</string>
    <string name="add_planned_courses">Add Planned Courses:</string>
    <string name="course_timeline">Course Timeline</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="course_list">Course List:</string>
    <string name="add_prereq">Add Prerequisites</string>
    <string name="course_code">Course code</string>
    <string name="fall">Fall</string>
    <string name="course_name">Course name</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="previous_page">Previous page</string>
    <string name="courses_taken">Courses Taken:</string>
    <string name="add_courses">Add Courses:</string>
    <string name="course_information">Course Information</string>
    <string name="add">Add</string>
    <string name="course_code_dot_dot">Course Code:</string>
    <string name="course_name_dot_dot">Course Name:</string>
    <string name="avaliable_sessions_dot_dot">Avaliable Sessions:</string>
    <string name="textview">TextView</string>
    <string name="prerequistes_dot_dot">Prerequistes:</string>
    <string name="edit_course">Edit Course</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="generate">Generate</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_exclamation_mark">Welcome!</string>
    <string name="manage_course_timeline">Manage Course Timeline</string>
    <string name="manage_courses">Manage Courses</string>
    <string name="course_timeline_dot_dot">Course Timeline:</string>
    <string name="session">Session</string>
    <string name="course">Course</string>
    <string name="confirm_password">Confirm Password</string>
</resources>